syntax = "proto3";

package blog.blog;

import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "blog/blog/params.proto";
import "blog/blog/help.proto";
import "blog/blog/post.proto";

option go_package = "blog/x/blog/types";

// Query defines the gRPC querier service.
service Query {
  
  // Parameters queries the parameters of the module.
  rpc Params (QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/blog/blog/params";
  
  }
  
  // Queries a list of Help items.
  rpc Help    (QueryGetHelpRequest) returns (QueryGetHelpResponse) {
    option (google.api.http).get = "/blog/blog/help/{id}";
  
  }
  rpc HelpAll (QueryAllHelpRequest) returns (QueryAllHelpResponse) {
    option (google.api.http).get = "/blog/blog/help";
  
  }
  
  // Queries a list of Post items.
  rpc Post    (QueryGetPostRequest) returns (QueryGetPostResponse) {
    option (google.api.http).get = "/blog/blog/post/{id}";
  
  }
  rpc PostAll (QueryAllPostRequest) returns (QueryAllPostResponse) {
    option (google.api.http).get = "/blog/blog/post";
  
  }
}
// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  
  // params holds all the parameters of this module.
  Params params = 1 [(gogoproto.nullable) = false];
}

message QueryGetHelpRequest {
  uint64 id = 1;
}

message QueryGetHelpResponse {
  Help Help = 1 [(gogoproto.nullable) = false];
}

message QueryAllHelpRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllHelpResponse {
  repeated Help                                   Help       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

message QueryGetPostRequest {
  uint64 id = 1;
}

message QueryGetPostResponse {
  Post Post = 1 [(gogoproto.nullable) = false];
}

message QueryAllPostRequest {
  cosmos.base.query.v1beta1.PageRequest pagination = 1;
}

message QueryAllPostResponse {
  repeated Post                                   Post       = 1 [(gogoproto.nullable) = false];
           cosmos.base.query.v1beta1.PageResponse pagination = 2;
}

